--- a/pom.xml
+++ b/pom.xml
@@ -73,12 +73,17 @@
         <junit.jupiter.version>5.0.0-M2</junit.jupiter.version>
         <junit.vintage.version>${junit.version}.0-M2</junit.vintage.version>
         <junit.platform.version>1.0.0-M2</junit.platform.version>
-        <jackson.version>2.8.7</jackson.version>
+        <jackson.version>2.8.10</jackson.version>
         <keycloak.version>3.0.0.Final</keycloak.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-annotations</artifactId>
@@ -175,9 +180,9 @@
             </dependency>
 
             <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-annotations</artifactId>
-                <version></version>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.5.5</version>
             </dependency>
 
         </dependencies>
@@ -374,5 +379,6 @@
         <module>calendar-helper</module>
         <module>organisation</module>
         <module>jms-batch</module>
+        <module>hubot</module>
     </modules>
 </project>
