--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,13 +12,13 @@ jobs:
     - checkout
     - restore_cache:
         key: dep-cache-{{ checksum "pom.xml" }}
-    - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.0:go-offline -s /tools/m2/settings.xml
+    - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.0:go-offline -s ./.circleci/settings.xml
     - save_cache:
         paths:
         - ~/.m2
         key: dep-cache-{{ checksum "pom.xml" }}
     # Cannot use -o because of snapshot dependencies.
-    - run: mvn test -s /tools/m2/settings.xml
+    - run: mvn test -s ./.circleci/settings.xml
     - run:
         name: Save test results
         command: |
@@ -47,7 +47,7 @@ jobs:
         - ~/.m2
         key: dep-cache-{{ checksum "pom.xml" }}
     # Cannot use -o because of snapshot dependencies.
-    - run: mvn deploy -s /tools/m2/settings.xml -DskipTests
+    - run: mvn deploy -s ./.circleci/settings.xml -DskipTests
 workflows:
   version: 2
   build_test_deploy:
