--- a/pom.xml
+++ b/pom.xml
@@ -46,14 +46,13 @@
         <url>http://www.entur.org/</url>
     </organization>
 
-
     <distributionManagement>
         <snapshotRepository>
-            <id>Nexus</id>
-            <url>https://nexus.rutebanken.org/content/repositories/snapshots</url>
+            <id>snapshots</id>
+            <name>entur2-snapshots</name>
+            <url>https://entur2.jfrog.io/entur2/libs-snapshot-local</url>
         </snapshotRepository>
     </distributionManagement>
-
 
     <properties>
         <license.licenseName>eupl-1.2</license.licenseName>
@@ -266,7 +265,6 @@
             </plugin>
         </plugins>
     </build>
-
     <profiles>
         <profile>
             <id>doclint-java8-disable</id>
