--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <keycloak.version>4.6.0.Final</keycloak.version>
         <spring.version>5.0.7.RELEASE</spring.version>
         <hazelcast.version>3.9.4</hazelcast.version>
+        <activemq.version>5.15.8</activemq.version>
     </properties>
 
     <dependencyManagement>
